smart cab re-work

--- a/Running.ipynb
+++ b/Running.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -142,6 +142,95 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'forward'"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str_array=[None, 'forward']\n",
+    "str(choice(str_array))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'forward'"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test={'forward': 0, 'None': 0, 'right': -0.8407105062193478, 'left': 0}\n",
+    "maxQ=max(test.values())\n",
+    "\n",
+    "max_keys=[]\n",
+    "\n",
+    "max_keys=[x for x, value in test.iteritems() if value==maxQ]\n",
+    "\n",
+    "choice(max_keys)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('forward', 0)\n",
+      "('None', 0)\n",
+      "('right', -0.8407105062193478)\n",
+      "('left', 0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x in test.iteritems():\n",
+    "    print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 34,
    "metadata": {},
    "outputs": [
@@ -162,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -174,7 +263,7 @@
     "stat_dict['right']=1\n",
     "stat_dict['None']=-0.5\n",
     "max_value=max(stat_dict.values())\n",
-    "max_keys = [k for k, v in stat_dict.items() if v == max_value]"
+    "# max_keys = [k for k, v in stat_dict.items() if v == max_value]"
    ]
   },
   {
@@ -199,22 +288,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'forward'"
+       "1"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "choice(max_keys)"
+    "max_value"
    ]
   },
   {
@@ -239,12 +328,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.275267650554037"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t={'forward': -9.001494054712886, 'None': 2.275267650554037, 'right': -0.20096333158091428, 'left': -7.838614159753888}\n",
+    "max(t.values())"
+   ]
   },
   {
    "cell_type": "code",
